styles.css
/* ... */
@media screen and (min-width: 1024px) {
  .section-title {
    font-size: 3rem;
  }
  /*** HERO ***/
  .hero-title {
    font-size: 4rem;
  }

  .hero-subtitle {
    font-size: 1.75rem;
  }

  .hero-btn-wrapper {
    font-size: 1.75rem;
  }

  .hero-btn-wrapper a {
    border-radius: 40px;
  }

  /*** HERO ***/

  /** Activity **/
  .activity-container {
    margin-bottom: 9rem;
  }
  .activity-text h2,
  .cabin-text h2 {
    font-size: 2rem;
  }
  .activity-text p,
  .activity-text p {
    font-size: 1.5rem;
  }
  /** Activity **/

  /*** CABINS ***/
  .cabin-card-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .cabin-card {
    width: 30%;
  }
  /*** CABINS ***/

  /*** CONTACT ***/
  .contact-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .contact-text,
  #contact-form {
    width: 47%;
    max-width: 800px;
  }
  /*** CONTACT ***/

  /** FOOTER **/
  #footer {
    padding-top: 7em;
  }
  .footer-item h4 {
    font-size: 2rem;
  }
  .footer-item a,
  .footer-item p {
    font-size: 1.25rem;
  }
  /** FOOTER **/
}

@media screen and (min-width: 1280px) {
  .main-container {
    width: 80%;
  }

  header nav ul li a {
    font-size: 1.25rem;
  }
  /** Activity **/
  .activity-btn {
    font-size: 1.5rem;
  }
  /** Activity **/

  /** FOOTER **/
  #footer {
    padding-top: 9em;
  }
  /** FOOTER **/
}

@media screen and (min-width: 1536px) {
  .main-container {
    width: 70%;
    max-width: 1400px;
  }

  /** FOOTER **/
  #footer {
    padding-top: 25vh;
  }
  /** FOOTER **/
}
/*============
  MEDIA QUERY
==============*/

